--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a href="mailto:dashulya-pustohailova@mail.ru">dashulya-pustohailova@mail.ru</a>
+        <a class="footer-email" href="mailto:dashulya-pustohailova@mail.ru">dashulya-pustohailova@mail.ru</a>
+        <a class="footer-phone" href="tel:+79312602896">+7 931 260 28 96</a>
       </div>
     </header>
 
@@ -23,6 +24,10 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+
+        <img src="img/files/IMG_20180407_234424_609.png"  width="800"  alt="Фотография Дарьи">
+      </figure>
       <div class="container">
         <h3>Пара слов о себе</h3>
         <p>Текст с парой слов о себе.</p>
@@ -33,20 +38,38 @@
       </div>
     </section>
 
+    <div class="container skills">
+      <h3>Мои навыки</h3>
+      <dl class="skills-list">
+        <dt>HTML</dt>
+        <dd class="level"><div style="width: 80%;">80%</div></dd>
+        <dt >CSS</dt>
+        <dd class="level"><div style="width: 80%;">80%</div></dd>
+        <dt >JS</dt>
+        <dd class="level"><div style="width: 50%;">50%</div></dd>
+        <dt >PHP</dt>
+        <dd class="level"><div style="width: 40%;">40%</div></dd>
+      </dl>
+    </div>
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="img/files/project.jpg" width="928" height="536" alt="Cайт инструктора Кекса">
+        </figure>
       <h3>Сайт инструктора Кекса</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
-
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+      <div class="container">
+        <a class="footer-email" href="mailto:dashulya-pustohailova@mail.ru">dashulya-pustohailova@mail.ru</a>
+        <a  class="footer-phone" href="tel:+79312602896">+7 931 260 28 96</a>
+      </div>
     </footer>
   </body>
 </html>
